overlapping text corrected

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -555,20 +555,22 @@
     #hero {
             /* ########  uncomment it ######### */
 
-        /*width: 100%;
+        width: 100%;
         height: 100vh;
-        background: url("../img/ted_intro.webm") top center;
-        back
+        background: url("../img/ted_intro.gif") top center;
         background-size: cover;
-        position: relative;*/
+        position: relative;
+        padding: 0;
+        right: 0;
+        bottom: 0;
 
         /* #########  Comment it  ############*/
-        padding: 0;
+        /*padding: 0;
         position: relative;
         right: 0;
         bottom: 0;
-        min-width: 100%;
-        min-height: 100%;
+        width: 100%;
+        height: 100%;*/
     }
     
     #hero:before {
@@ -1075,12 +1077,13 @@
     }
     
     @media (max-width: 768px) {
-        .section-title h2 {
+        /*.section-title h2 {
             line-height: 32px;
-        }
+        }*/
         .section-title p,
         .section-title h2 {
             margin: 0 5px 5px -10px;
+            line-height: 32px;
         }
     }
     /*--------------------------------------------------------------
